--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,54 @@
-﻿# Core Django Framework
+﻿# ============================================
+# TournifyX Requirements
+# ============================================
+
+# Core Django Framework
 Django==5.2
 asgiref==3.8.1
 sqlparse==0.5.3
 tzdata==2025.2
 
+# Database
+# Django uses SQLite by default (included with Python)
+# For PostgreSQL: psycopg2-binary==2.9.9
+# For MySQL: mysqlclient==2.2.0
+
 # Django Extensions & Utilities
 django-widget-tweaks==1.5.0
-django-simple-captcha==0.6.2
-django-ranged-response==0.2.0
 
+# Image Processing (for user avatars and profile pictures)
+Pillow==11.0.0
 
-# Image Processing
-Pillow==11.2.1
+# Environment Variables (for secure configuration)
+python-dotenv==1.0.0
 
-
-# HTTP & Networking
-httpx==0.19.0
-httpcore==0.13.7
-h11==0.12.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-idna==3.10
-rfc3986==1.5.0
-
-
-# Async Support
-anyio==3.7.1
-sniffio==1.3.1
+# Payment Integration
+stripe==7.0.0
 
 # Email Support
-aiosmtplib==1.1.7
+# Django's built-in email backend is used
+# No additional packages required for SMTP
 
-# Validation & Utilities
-validus==0.3.0
-messages==0.8.0
-captcha==0.7.1
+# Additional Python Standard Library Modules Used
+# (These are built-in, no installation needed):
+# - os
+# - random
+# - string
+# - secrets
+# - itertools
+# - collections (defaultdict, OrderedDict)
+# - pathlib
 
+# Development Tools (Optional)
+# django-debug-toolbar==4.2.0
+# black==23.12.1
+# flake8==6.1.0
+
+# Production Server (Optional)
+# gunicorn==21.2.0
+# whitenoise==6.6.0
+
+# ============================================
+# Installation Instructions:
+# pip install -r requirements.txt
+# ============================================
