--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,37 @@ stripe==7.0.0
 # whitenoise==6.6.0
 
 # ============================================
+# Testing & Automation
+# ============================================
+
+# pytest - Testing framework
+pytest==8.4.2
+pytest-html==4.1.1
+pytest-metadata==3.1.1
+
+# Selenium - Browser automation
+selenium==4.27.1
+
+# WebDriver Manager - Automatic driver management
+webdriver-manager==4.0.2
+
+# Additional testing dependencies
+attrs==24.3.0
+certifi==2024.12.14
+h11==0.14.0
+idna==3.10
+outcome==1.3.0
+packaging==24.2
+pluggy==1.6.0
+PySocks==1.7.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.28.0
+trio-websocket==0.11.1
+urllib3==2.3.0
+wsproto==1.2.0
+
+# ============================================
 # Installation Instructions:
 # pip install -r requirements.txt
 # ============================================
